--- a/gui/app/templates/_settings.html
+++ b/gui/app/templates/_settings.html
@@ -322,15 +322,15 @@
               </div>
               <div class="dropdown options-customscript-dropdown"style="display: inline-block">
                 <button class="btn btn-default dropdown-toggle" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
-                  <span class="dropdown-text">{{settings.getSerialPort()}}</span>
+                  <span class="dropdown-text">{{settings.getSerialPort().Name}}</span>
                   <span class="caret"></span>
                 </button>
                 <ul class="dropdown-menu" aria-labelledby="options-customscript">
                     <li ng-repeat="port in serialPorts">
-                        <a href ng-click="settings.setSerialPort(port)">{{port.label}}</a>
+                        <a href ng-click="settings.setSerialPort(port)">{{port.Name}}</a>
                     </li>
                     <li class="divider"></li>
-                  <li><a href ng-click="settings.setSerialPort('none')">None</a></li>
+                  <li><a href ng-click="settings.setSerialPort({Name:'None', manufacturer:undefined})">None</a></li>
                 </ul>
               </div>
               <span style="padding-left:10px" ng-if="settings.useOverlayInstances()"><a href ng-click="showEditOverlayInstancesModal()">Edit Instances</a></span>
